# WoW_335a_Patcher

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-windows.sh  build.sh  getold.py  gui_main.cpp  main.cpp  patches.h
cmake/: windows-x86_64-toolchain.cmake
src/: gui_main.cpp  patches.h
